v1.1.0:
  Moved to parameterized class from hiera function
v1.0.2:
  Initial public release