@@ -5,5 +5,5 @@ license 'Apache'
 summary 'Manages the timezone and ntp.'
 description 'Installs, configures, and runs the ntp service.  Sets the local timezone.'
 project_page 'https://github.com/evenup/evenup-time'
-dependency 'evenup/common', '>= 0.1.0'
+dependency 'puppetlabs/stdlib', '>= 3.0'
 
